--- a/Ejobs/templates/header1.html
+++ b/Ejobs/templates/header1.html
@@ -10,7 +10,7 @@
 </head>
 
 <nav>
-    <div class="logo"></div>
+    <div class="logo"><img src="{% static "images/ej.png" %}" alt="logo"/ height="50px"></div>
     <ul class="nav-items">
         <li class="nav-item"><a href="/"> Home</a></li>
         <li class="nav-item"><a href="{% url 'login' %}"> Login</a></li>
