--- a/Ejobs/templates/jobs/savedjobs.html
+++ b/Ejobs/templates/jobs/savedjobs.html
@@ -75,7 +75,7 @@
     {% endfor %}
 </div>
 
-
+{% include "footer.html" %}
 <script>
 function openForm() {
   document.getElementById("myForm").style.display = "block";
