--- a/Ejobs/templates/seeker/seekerHeader.html
+++ b/Ejobs/templates/seeker/seekerHeader.html
@@ -10,7 +10,8 @@
   <title>Home</title>
 </head>
 <nav>
-    <div class="logo"></div>
+    <div class="logo"><img src="{% static "images/ej.png" %}" alt="logo"/ height="50px"></div>
+
     <ul class="nav-items">
         <li class="nav-item"><a href="{% url 'seeker_dashboard' %}"> Home</a></li>
         <li class="nav-item"><a href="{% url 'saved_jobs' %}"> saved jobs</a></li>
@@ -20,7 +21,7 @@
         {% else %}
         <li class="nav-item"><a href="{% url 'seeker_profile' %}">Profile</a></li>
         {% endif %}
-        <li class="nav-item" id="myBtn"><a>Logout</a></li>
+        <li class="nav-item" id="myBtn" style="cursor:pointer;"><a>Logout</a></li>
     </ul>
 </nav>
 
