--- a/Ejobs/templates/seeker/seeker_register.html
+++ b/Ejobs/templates/seeker/seeker_register.html
@@ -14,6 +14,7 @@
         </div>
         <div class="auth-right">
           <div class="auth-form-wrapper">
+          <h2> Seeker Register</h2>
             <form action="{% url 'seeker_register' %}" method="post" enctype="multipart/form-data">
               {% csrf_token %}
               <div class="form-item">
