--- a/Ejobs/templates/homepage.html
+++ b/Ejobs/templates/homepage.html
@@ -3,7 +3,7 @@
     
         <div class="container">
             <div class="hero-left">
-                <h1 class="hero-title">COVID-19 Unemployment Response</h1>
+                <h1 class="hero-title"><u>COVID-19 Unemployment Response</u></h1>
                 <p class="hero-desc">The Coronavirus (COVID-19) pandemic has been brutal on Nepal's workforce, and merojob is committed to helping the superheroes of Nepal's economy.
                 <br><br>It is estimated that millions of Nepalese will lose their jobs. This section is dedicated to bridging active employers and active job-seekers in the fastest way.</p>
                 <div class="cta">
@@ -20,7 +20,7 @@
             
             <div class="hero-right">
                 <div class="hero-right-image">
-                    <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
+                    <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
                 </div>
             </div>
                 <div class="popup-msg">
