--- a/Ejobs/templates/jobs/jobs.html
+++ b/Ejobs/templates/jobs/jobs.html
@@ -7,6 +7,44 @@
             </form>
         </div>
     </div>
+
+
+{% comment %} searched jobs {% endcomment %}
+
+  <ul class="job-items">
+    {% for job in searched_jobs %}
+    <H1>Your Search Results:</H1>
+    <li class="job-item">
+      <div class="job-item-left">
+        <a href="{% url 'job_details_2' id=job.job_id %}"> <h2 class="job-item-title">{{ job.job_title }}</h2></a>
+        <p>Employer: {{ job.job_employer }}</p>
+        <p>Position: {{ job.job_position }}</p>
+        
+    <p>Salary: <a href="">{{ job.salary }}</a></p>
+    <p>Experience required: {{ job.experience }}</p>
+        <div class="job-category-wrapper">
+          <p class="job-item-category">Category:</p>
+          <p></p>
+          <p class="job-category">{{ job.job_category }}</p>
+        </div>
+      </div>
+
+      <div class="job-item-low">
+        <h5>Contact Info</h5>
+        <p>Phone: {{ job.job_phone }}</p>
+        <p>Email Us: <a href="">{{ job.job_email }}</a></p>
+        <p>Apply On Our Website: <a href="">{{ job.job_website }}</a></p>
+      </div>
+    </li>
+    {% endfor %}
+    </ul>
+
+
+
+
+
+
+{% comment %} all jobs {% endcomment %}
 <ul class="job-items">
     {% for job in jobs %}
     <li class="job-item">
@@ -28,14 +66,7 @@
         <h5>Contact Info</h5>
         <p>Phone: {{ job.job_phone }}</p>
         <p>Email Us: <a href="">{{ job.job_email }}</a></p>
-
-        {% comment %} <a href="{{ job.job_website }}" target="popup" onclick="tab.open('../{{ job.job_website }}','name')">{{ job.job_website }}</a> {% endcomment %}
         <p>Apply On Our Website: <a href="{{ job.job_website }}" target="popup" onclick="tab.open('../{{ job.job_website }}','name')">{{ job.job_website }}</a></p>
-        {% comment %} <p>Apply On Our Website: <a href="">{{ job.job_website }}</a></p> {% endcomment %}
-        {% comment %} <div class="job-item-cta">
-          <a href="{% url 'apply_job' job.job_id %}" ><button class="btn btn-primary" style="margin-right:20px;"> APPLY</button></a>
-          <a href="{% url 'save_job' job.job_id %}"><button class="btn btn-primary"> save </button></a>
-        </div> {% endcomment %}
       </div>
     </li>
     {% endfor %}
