--- a/Ejobs/templates/seeker/profile.html
+++ b/Ejobs/templates/seeker/profile.html
@@ -33,7 +33,7 @@
   <a href="{% url 'additional_details' %}"><button class="button profile-follow">Complete your profile</button></a >
 
 {% endif %}
-      <button class="button profile-follow">Change password</button>
+      <a href="{% url 'password_change' %}"><button class="button profile-follow">Change password</button></a>
     </div>
   </div>
   <!-- Detail Section -->
